--- a/README
+++ b/README
@@ -1,11 +1,49 @@
-# Electronics Retail Pricing Benchmark 
+# Pricing Benchmark & Price Volatility Analysis (Power BI)
 
+## Project Overview
+This project analyzes product pricing data to understand **price levels**, **price dispersion**, and **price volatility** across brands and product categories.
 
-## Objective
-Prepare and validate product-level pricing data to support price benchmarking, category-level analysis, and pricing governance dashboards.
+The dashboard is designed from a **retail pricing perspective**, to evaluate competitive pricing consistency and brand positioning.
 
-## Tools
-- R (data preparation & pricing metrics)
-- Power BI (pricing dashboards – next step)
-- GitHub (version control)
+---
 
+## Business Questions Addressed
+- Which product categories show the highest price volatility?
+- How does price dispersion differ across brands?
+- How do sale vs non-sale items affect reference pricing?
+
+---
+
+## Tools & Skills Used
+- **Power BI**
+- **DAX (Measures & Calculations)**
+- Data modeling & aggregation
+- Interactive dashboards
+- Business-oriented data storytelling
+
+---
+
+## Dashboard Pages
+
+### Page 1 – Price Level Overview
+- Average reference price by category
+- Maximum price spread
+- Brand-level filtering
+
+![Price Overview](pictures/dashboard_page1.png)
+
+---
+
+### Page 2 – Price Volatility Analysis
+- Price spread (%) by category
+- Relationship between price level and price volatility by brand
+- Interactive brand slicer
+
+![Price Volatility](pictures/dashboard_page1.png)
+
+---
+
+## Future Improvements / work in progress
+- Add time-based price trend analysis
+- Include competitor-level comparisons
+- Enhance outlier detection for extreme price spreads
